<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/sort_by"
        android:icon="@drawable/ic_sort_white_24dp"
        app:showAsAction="ifRoom">
        <menu>

            <item
                android:id="@+id/menuSortTitle"
                android:title="@string/sort_by_title" />
            <item
                android:id="@+id/menuSortReminder"
                android:title="@string/Sort_by_Reminder" />

            <!--<item-->
                <!--android:id="@+id/menuSortEdited"-->
                <!--android:title="@string/sort_by_edited" />-->

        </menu>
    </item>
    <item
        android:id="@+id/Trash"
        android:title="Trash Box"
        />
    <item
        android:id="@+id/Settings"
        android:title="Settings"
        />
    <item
        android:id="@+id/Feedback"
        android:title="Feedback"
        />

    <!--<item-->
    <!--android:id="@+id/add"-->
    <!--android:title="Add"-->
    <!--app:showAsAction="always"/>-->
    <!--<item-->
    <!--android:title="Remove"-->
    <!--android:id="@+id/remove"-->
    <!--app:showAsAction="always"/>-->
</menu>