<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:layout_margin="3dp"
    android:theme="@style/AppTheme.NoActionBar"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/activity_main2">


<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:layout_margin="22dp"
    tools:context="com.example.avnijain.expensemanager.ExpenseDetail">
<ImageView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/imageView"
    android:layout_marginBottom="4dp"/>

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
        android:fontFamily="serif"
    android:text="What is to be done?"
        android:textSize="15sp"
    android:textColor="#0D47A1"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/TitleHint"
        android:layout_margin="5dp"
        android:textSize="20sp"
        android:id="@+id/editTitle"
        android:layout_marginBottom="25dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Due Date"
        android:fontFamily="serif"
        android:layout_marginTop="25dp"
        android:textSize="15sp"
        android:textColor="@color/colorPrimaryDark"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:layout_height="wrap_content">
    <TextView
        android:textSize="20sp"
        android:layout_width="0dp"
        android:layout_weight="5"
        android:id="@+id/expenseDateEditText"
        android:layout_height="wrap_content"
        android:hint="@string/SetDate"
        android:inputType="none"
        />
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@+id/calender"
            android:layout_margin="3dp"
            android:layout_height="match_parent"
            android:src="@drawable/calendar"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        >
    <TextView
        android:layout_width="0dp"
        android:textSize="20sp"
        android:id="@+id/expenseTimeEditText"
        android:layout_weight="5"
        android:layout_height="wrap_content"
        android:hint="@string/SetTime"
        android:inputType="none"
        />
    <ImageView
        android:id="@+id/clock"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_margin="3dp"
        android:layout_height="match_parent"
        android:src="@drawable/clock"/>
</LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textSize="15sp"
        android:text=" Description( if any )"
        android:textColor="@color/colorPrimaryDark"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="Write Here"
        android:textSize="20sp"
        android:id="@+id/editCategory"
        android:layout_margin="5dp"
        />

    <!--<EditText-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:hint="Enter Price "-->
        <!--android:inputType="numberDecimal"-->
        <!--android:id="@+id/editPrice"-->
        <!--android:layout_margin="20dp" />-->


    <!--<Button-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="Submit"-->
        <!--android:layout_margin="40dp"-->
        <!--android:id="@+id/submitButton"-->
         <!--/>-->

</LinearLayout>
</ScrollView>